Add AGENTS.md for project overview, developer workflow, and content guidelines